cluster/infra/networking/traefik/addons/chains.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whitelisted-ips-only
  namespace: network-system
spec:
  chain:
    middlewares:
      - name: whitelisted-ips
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: external
  namespace: network-system
spec:
  chain:
    middlewares:
      - name: whitelisted-ips-only
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: internal
  namespace: network-system
spec:
  chain:
    middlewares:
      - name: rfc1918-ips
      - name: error-pages
