cluster/infra/networking/traefik/addons/middlewares-authelia.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-auth
spec:
  forwardAuth:
    address: 'http://authelia.kube-auth.svc.cluster.local/api/verify?rd=https://auth.${DOMAIN_NAME}'
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Name
      - Remote-Email
      - Remote-Groups

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-headers
spec:
  headers:
    browserXssFilter: true
    customFrameOptionsValue: "SAMEORIGIN"
    customResponseHeaders:
      Cache-Control: "no-store"
      Pragma: "no-cache"
