cluster/infra/networking/traefik/addons/dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik-system
  annotations:
#    traefik.ingress.kubernetes.io/router.middlewares: "traefik-system-internal@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.${SECRET_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
